--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiofiles==22.1.0
 aiohttp==3.8.4
 aiosignal==1.3.1
 aiosqlite==0.19.0
+altair==5.0.1
 anyio==3.6.2
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
@@ -13,9 +14,12 @@ Babel==2.12.1
 backcall==0.2.0
 beautifulsoup4==4.12.2
 bleach==6.0.0
+blinker==1.6.2
+cachetools==5.3.1
 certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==3.1.0
+click==8.1.3
 cmake==3.26.3
 colorama==0.4.6
 comm==0.1.3
@@ -37,6 +41,7 @@ gitdb==4.0.10
 GitPython==3.1.31
 greenlet==2.0.2
 idna==3.4
+importlib-metadata==6.6.0
 ipykernel==6.22.0
 ipython==8.12.0
 ipython-genutils==0.2.0
@@ -68,11 +73,13 @@ langchainplus-sdk==0.0.8
 lit==16.0.2
 load-dotenv==0.1.0
 lxml==4.9.2
+markdown-it-py==2.2.0
 MarkupSafe==2.1.2
 marshmallow==3.19.0
 marshmallow-enum==1.5.1
 matplotlib==3.7.0
 matplotlib-inline==0.1.6
+mdurl==0.1.2
 mistune==2.0.5
 mpmath==1.3.0
 multidict==6.0.4
@@ -105,6 +112,8 @@ packaging==23.1
 pandas==1.5.3
 pandocfilters==1.5.0
 parso==0.8.3
+pdfminer.six==20221105
+pdfplumber==0.9.0
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.5.0
@@ -112,24 +121,30 @@ platformdirs==3.3.0
 plotly==5.14.1
 prometheus-client==0.16.0
 prompt-toolkit==3.0.38
+protobuf==4.23.2
 psutil==5.9.5
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pyarrow==12.0.0
 pycparser==2.21
 pydantic==1.10.9
+pydeck==0.8.1b0
 Pygments==2.15.1
+Pympler==1.0.1
 pyparsing==3.0.9
 pyrsistent==0.19.3
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-json-logger==2.0.7
 pytz==2023.3
+pytz-deprecation-shim==0.1.0.post0
 PyYAML==6.0
 pyzmq==25.0.2
 regex==2023.6.3
 requests==2.28.2
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
+rich==13.4.1
 scikit-learn==1.2.2
 scipy==1.10.1
 seaborn==0.12.2
@@ -140,13 +155,17 @@ sniffio==1.3.0
 soupsieve==2.4.1
 SQLAlchemy==2.0.15
 stack-data==0.6.2
+streamlit==1.23.1
+streamlit-chat==0.0.2.2
 sympy==1.11.1
 tenacity==8.2.2
 terminado==0.17.1
 threadpoolctl==3.1.0
 tiktoken==0.4.0
 tinycss2==1.2.1
+toml==0.10.2
 tomli==2.0.1
+toolz==0.12.0
 torch==1.12.1
 torchvision==0.13.1
 tornado==6.3.1
@@ -156,8 +175,12 @@ triton==2.0.0
 typing-inspect==0.9.0
 typing_extensions==4.5.0
 tzdata==2023.3
+tzlocal==4.3
 uri-template==1.2.0
 urllib3==1.26.15
+validators==0.20.0
+Wand==0.6.11
+watchdog==3.0.0
 wcwidth==0.2.6
 webcolors==1.13
 webencodings==0.5.1
@@ -167,3 +190,4 @@ xmltodict==0.12.0
 y-py==0.5.9
 yarl==1.9.2
 ypy-websocket==0.8.2
+zipp==3.15.0
