--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ backcall==0.2.0
 beautifulsoup4==4.12.2
 bleach==6.0.0
 blinker==1.6.2
+Brotli==1.0.9
 cachetools==5.3.1
 certifi==2022.12.7
 cffi==1.15.1
@@ -30,6 +31,8 @@ dataclasses-json==0.5.7
 debugpy==1.6.7
 decorator==5.1.1
 defusedxml==0.7.1
+duckduckgo-search==3.8.3
+exceptiongroup==1.1.1
 executing==1.2.0
 faiss-cpu==1.7.4
 fastjsonschema==2.16.3
@@ -40,8 +43,15 @@ frozenlist==1.3.3
 gitdb==4.0.10
 GitPython==3.1.31
 greenlet==2.0.2
+h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+httpcore==0.17.2
+httpx==0.24.1
+hyperframe==6.0.1
 idna==3.4
 importlib-metadata==6.6.0
+iniconfig==2.0.0
 ipykernel==6.22.0
 ipython==8.12.0
 ipython-genutils==0.2.0
@@ -69,7 +79,7 @@ jupyterlab-widgets==3.0.7
 jupyterlab_server==2.22.1
 kiwisolver==1.4.4
 langchain==0.0.200
-langchainplus-sdk==0.0.8
+langchainplus-sdk==0.0.10
 lit==16.0.2
 load-dotenv==0.1.0
 lxml==4.9.2
@@ -119,6 +129,7 @@ pickleshare==0.7.5
 Pillow==9.5.0
 platformdirs==3.3.0
 plotly==5.14.1
+pluggy==1.0.0
 prometheus-client==0.16.0
 prompt-toolkit==3.0.38
 protobuf==4.23.2
@@ -133,6 +144,7 @@ Pygments==2.15.1
 Pympler==1.0.1
 pyparsing==3.0.9
 pyrsistent==0.19.3
+pytest==7.3.2
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-json-logger==2.0.7
@@ -152,6 +164,7 @@ Send2Trash==1.8.0
 six==1.16.0
 smmap==5.0.0
 sniffio==1.3.0
+socksio==1.0.0
 soupsieve==2.4.1
 SQLAlchemy==2.0.15
 stack-data==0.6.2
