--- a/requirements.txt
+++ b/requirements.txt
@@ -79,7 +79,7 @@ jupyterlab-widgets==3.0.7
 jupyterlab_server==2.22.1
 kiwisolver==1.4.4
 langchain==0.0.200
-langchainplus-sdk==0.0.10
+langchainplus-sdk
 lit==16.0.2
 load-dotenv==0.1.0
 lxml==4.9.2
