--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-aiofiles==23.1.0
+aiofiles==22.1.0
 aiohttp==3.8.4
 aiosignal==1.3.1
 aiosqlite==0.19.0
@@ -31,7 +31,6 @@ dataclasses-json==0.5.7
 debugpy==1.6.7
 decorator==5.1.1
 defusedxml==0.7.1
-duckduckgo-search==3.8.3
 exceptiongroup==1.1.1
 executing==1.2.0
 faiss-cpu==1.7.4
@@ -79,7 +78,7 @@ jupyterlab-widgets==3.0.7
 jupyterlab_server==2.22.1
 kiwisolver==1.4.4
 langchain==0.0.200
-langchainplus-sdk
+langchainplus-sdk==0.0.10
 lit==16.0.2
 load-dotenv==0.1.0
 lxml==4.9.2
